RESOLVED FIXED233882
REGRESSION (r286527): Three API tests crashing under WebKit::ProcessLauncher::launchProcess()
https://bugs.webkit.org/show_bug.cgi?id=233882
Summary REGRESSION (r286527): Three API tests crashing under WebKit::ProcessLauncher:...
Ryan Haddad
Reported 2021-12-06 10:33:56 PST
Created attachment 446052 [details] crash log The following three API tests are crashing on iOS and macOS debug gots after https://trac.webkit.org/changeset/286527/webkit landed TestWebKitAPI.WKNavigation.FailureToStartWebProcessAfterCrashRecovery TestWebKitAPI.WKNavigation.FailureToStartWebProcessRecovery TestWebKitAPI.WebKit.NetworkProcessRelaunchOnLaunchFailure Thread 0 Crashed: 0 libxpc.dylib 0x00000001870b9ff8 0x187094000 + 155640 1 libxpc.dylib 0x0000000187099fa0 0x187094000 + 24480 2 libxpc.dylib 0x0000000187099da4 0x187094000 + 23972 3 com.apple.WebKit 0x000000010e40d008 WebKit::ProcessLauncher::launchProcess()::$_0::operator()(NSObject<OS_xpc_object>*) const + 200 (ProcessLauncherCocoa.mm:256) 4 com.apple.WebKit 0x000000010e40cf34 WebKit::ProcessLauncher::launchProcess()::$_1::operator()(NSObject<OS_xpc_object>*)::'lambda'()::operator()() const + 56 (ProcessLauncherCocoa.mm:281) 5 com.apple.WebKit 0x000000010e40ce0c WTF::Detail::CallableWrapper<WebKit::ProcessLauncher::launchProcess()::$_1::operator()(NSObject<OS_xpc_object>*)::'lambda'(), void>::call() + 28 (Function.h:53) 6 com.apple.JavaScriptCore 0x00000001040e8a3c WTF::Function<void ()>::operator()() const + 124 (Function.h:82) 7 com.apple.JavaScriptCore 0x0000000104179088 WTF::RunLoop::performWork() + 316 (RunLoop.cpp:133) 8 com.apple.JavaScriptCore 0x000000010417de54 WTF::RunLoop::performWork(void*) + 44 (RunLoopCF.cpp:46)
Attachments
crash log (96.91 KB, text/plain)
2021-12-06 10:33 PST, Ryan Haddad
no flags
Patch (2.28 KB, patch)
2021-12-06 11:12 PST, Brent Fulgham
no flags
Patch (2.43 KB, patch)
2021-12-06 12:09 PST, Brent Fulgham
no flags
Radar WebKit Bug Importer
Comment 1 2021-12-06 10:34:33 PST
Brent Fulgham
Comment 3 2021-12-06 11:00:52 PST
What is the point of EWS if it does not reveal these kinds of problems. "https://ews-build.webkit.org/#/builders/3/builds/61596" indicates all-clear for the patch.
Ryan Haddad
Comment 4 2021-12-06 11:08:03 PST
(In reply to Brent Fulgham from comment #3) > What is the point of EWS if it does not reveal these kinds of problems. > "https://ews-build.webkit.org/#/builders/3/builds/61596" indicates all-clear > for the patch. In this case, the macOS API test queue is testing release builds, and this is only affecting debug.
Brent Fulgham
Comment 5 2021-12-06 11:12:14 PST
Brent Fulgham
Comment 6 2021-12-06 12:09:39 PST
Wenson Hsieh
Comment 7 2021-12-06 12:15:59 PST
Comment on attachment 446065 [details] Patch rs=me
EWS
Comment 8 2021-12-06 13:03:35 PST
Committed r286563 (?): <https://commits.webkit.org/r286563> All reviewed patches have been landed. Closing bug and clearing flags on attachment 446065 [details].
Note You need to log in before you can comment on or make changes to this bug.