REGRESSION (r286527): Three API tests crashing under WebKit::ProcessLauncher::launchProcess() https://bugs.webkit.org/show_bug.cgi?id=233882 <rdar://problem/86111726>

Reviewed by Brent Fulgham.

Correct the eventHandler to capture the process name, rather than using a raw pointer to the character string.

* UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm:
(WebKit::ProcessLauncher::launchProcess):



Canonical link: https://commits.webkit.org/244891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286563 268f45cc-cd09-0410-ab3c-d52691b4dbfc